admin login sayfasi olusturuldu

--- a/src/views/admin/layouts/auth.ejs
+++ b/src/views/admin/layouts/auth.ejs
@@ -47,12 +47,12 @@
                     <div class="card p-4">
                         
                         <%- body %>
-                    
+                      
                     </div>
                   </div>
-                  <div class="text-center pt-4">
+                  <!-- <div class="text-center pt-4">
                     <div class="font-weight-normal fs-16">You Don't have an account <a class="btn-link font-weight-normal" href="#">Register Here</a></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
