--- a/src/views/admin/pages/login.ejs
+++ b/src/views/admin/pages/login.ejs
@@ -3,14 +3,14 @@
     <div class="text-center title-style mb-6">
       <h1 class="mb-2">Login</h1>
       <hr />
-      <p class="text-muted">Sign In to your account</p>
+      <!-- <p class="text-muted">Sign In to your account</p> -->
     </div>
-    <div class="btn-list d-sm-flex">
+    <!-- <div class="btn-list d-sm-flex">
       <a href="https://www.google.com/gmail/" class="btn btn-google btn-block">Google</a>
       <a href="https://twitter.com/" class="btn btn-twitter d-block d-sm-inline mr-0 mr-sm-2">Twitter</a>
       <a href="https://www.facebook.com/" class="btn btn-facebook d-block d-sm-inline">Facebook</a>
-    </div>
-    <hr class="divider my-6" />
+    </div> -->
+    <!-- <hr class="divider my-6" /> -->
     <div class="input-group mb-3">
       <span class="input-group-addon"
         ><svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
@@ -38,7 +38,7 @@
         <button type="submit" class="btn btn-lg btn-primary btn-block"><i class="fe fe-arrow-right"></i> Login</button>
       </div>
       <div class="col-12">
-        <a href="forgot-password-1.html" class="btn btn-link box-shadow-0 px-0">Forgot password?</a>
+        <!-- <a href="forgot-password-1.html" class="btn btn-link box-shadow-0 px-0">Forgot password?</a> -->
       </div>
     </div>
   </div>
