--- a/src/views/clinic-panel/pages/clinic-login.ejs
+++ b/src/views/clinic-panel/pages/clinic-login.ejs
@@ -20,7 +20,7 @@
                             </div>
                             <div class="form-group password">
                               <label for="login-password">Şifrenizi Giriniz</label>
-                              <input type="password" class="form-control sifre" id="password" name="sifre" placeholder="Şifreniz">
+                              <input type="password" class="form-control sifre" id="password" name="password" placeholder="Şifreniz">
                               <img id="degistir" src="../user/img/clinic/svg/show-password.svg" class="mt-1" alt="Icon Arrow" />
                             </div>
                             <button type="submit" class="btn btn-second">Giriş Yap</button>
